--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elizabeth Anyango</title>
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
-    <h1>
-        Hello world this my first project
-    </h1>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
