added new sections with comments

--- a/index.html
+++ b/index.html
@@ -8,22 +8,55 @@
     
 </head>
 <body>
+    <!--The navigation bar starts here-->
     
+<div class="nav-bar">
 
 
 
 
 
+</div>
+    <!--The navigation bar ends here-->
+    <!--home introduction section with intro info starts here-->
+<div class="home">
+
+
+
+
+</div>
+ <!--home introduction section with intro info ends here-->
+ <!--About me and my resume section starts here-->
+
+<div class="about-me">
 
 
 
 
 
+</div>
+<!--about me and my resume section ends heres-->
+<!--My portfolio section-->
+<div class="my-portfolio">
 
 
 
 
 
+</div>
+<!--My portfolio section ends here-->
+<!--TUtorial section starts here-->
+<div class="tutorial">
+
+
+
+</div>
+<!--Tutorial section ends here-->
+<!--Footer sections starts here-->
+<div class="footer">
+
+</div>
+<!--Footer section ends here-->
 
 
 
