created a new image folder ,, finished up the navigation bar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <!--The navigation bar starts here-->
     
 <div class="nav-bar">
+ 
+<nav>
+    <a href="#">HOME</a>
+    <a href="#">ABOUT ME</a>
+    <a href="#">CONTACT ME</a>
+    <a href="#">PORTFOLIO</a>
 
-
+    <img src="images/Github@2x.svg" class="Git-hub">
+</nav>
 
 
 
