created a home section with intro message

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <!--The navigation bar ends here-->
     <!--home introduction section with intro info starts here-->
 <div class="home">
+    <p class="home-text">Hey I’m Elizabeth Anyango, a Full-stack Software <br>Engineer.<br>
+        I’m Motivated by a profound passion for <br>Technology and Strong willingness to Learn.</p>
 
-
+<img src="images/Vector 1.svg" class="vector1" width="100%">
 
 
 </div>
